--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,12 @@ target-version = ["py310"]
 line-length = 150
 src = ["src", "."]
 fix = true
-exclude = ["app/ui_streamlit.py","test/test_ingest.py","test/test_taxynomy.py","test/test_classifier_tiny.py"]
 
 [tool.ruff.lint]
 # E,F: pycodestyle/pyflakes, I: isort, UP: pyupgrade, B: bugbear, N: pep8-naming,
 # C4: comprehensions, TID: tidy imports, PL: pylint-like, PERF: performance, RUF: ruff-specific
 select = ["E", "F", "I", "UP", "B", "N", "C4", "TID", "PL", "PERF", "RUF"]
-ignore = []
+ignore = ["E402","PLC0415"]
 
 
 [tool.ruff.lint.isort]
