--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
 
 # LLM (local via Ollama)
 LLM_PROVIDER=ollama
-OLLAMA_MODEL=mistral
+OLLAMA_MODEL=gemma3:1b
 
 # Zero-shot classifier (free HF NLI model)
 ZSL_MODEL=facebook/bart-large-mnli
@@ -16,3 +16,8 @@ SENT_BATCH_SIZE=16
 SENT_MAX_LEN=512
 TOKENIZERS_PARALLELISM=false
 TORCH_NUM_THREADS=4
+
+ZSL_MAX_LEN=512
+ZSL_LABEL_BATCH=16
+TORCH_NUM_THREADS=4
+TOKENIZERS_PARALLELISM=false
