--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ testpaths = ["tests"]
 [tool.coverage.run]
 branch = true
 source = ["risk_analysis_agent"]  # adjust to your package
-omit = ["test/*"]
+omit = ["test/*","risk_analysis_agent/cli.py"]
 
 [tool.coverage.report]
 fail_under = 80
