fox docker issue and support local test

--- a/.env.example
+++ b/.env.example
@@ -7,17 +7,16 @@ EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
 # LLM (local via Ollama)
 LLM_PROVIDER=ollama
 OLLAMA_MODEL=gemma3:1b
+LLM_TEMPERATURE=0.2
+OLLAMA_BASE_URL=http://127.0.0.1:11434
 
 # Zero-shot classifier (free HF NLI model)
 ZSL_MODEL=facebook/bart-large-mnli
+ZSL_MAX_LEN=512
+ZSL_LABEL_BATCH=16
 
 # Inference knobs (optional)
 SENT_BATCH_SIZE=16
 SENT_MAX_LEN=512
 TOKENIZERS_PARALLELISM=false
 TORCH_NUM_THREADS=4
-
-ZSL_MAX_LEN=512
-ZSL_LABEL_BATCH=16
-TORCH_NUM_THREADS=4
-TOKENIZERS_PARALLELISM=false
