--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ langchain-chroma==0.2.6
 langchain-huggingface==0.3.1
 langchain-ollama==0.3.8
 langchain-text-splitters==0.3.11
+langchain_openai
+langchain_anthropic
 
 # Vector DB
 chromadb==1.0.21
